# rust-nn

./: Cargo.toml  README.md  flake.nix
src/: main.rs  model.rs
